--- a/content/20170308.md
+++ b/content/20170308.md
@@ -10,3 +10,6 @@ Author: 40423224
 <p>了解Altair的soildthinking</p>
 <p>認識Altair的特色，其中包括檢測受力.受熱.流力.最小化資源利用.較為人性的快捷列</p>
 <p>更改start的fossil路徑並且建立自己的近端fossil帳號密碼</p>
+
+<iframe src="https://player.vimeo.com/video/211593945" width="640" height="480" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p><a href="https://vimeo.com/211593945">2017-03-10_40423224_w3</a> from <a href="https://vimeo.com/user64028462">鲜奶仙草冻</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
