--- a/content/20170419.md
+++ b/content/20170419.md
@@ -1,9 +1,9 @@
-Title: 期中
+Title: Week8
 Date: 2017-04-19 11:00
 Category: 40423224
 Tags: w8
 Author: 40423224
 
-零件制作视频：https://youtu.be/dbJb6Fl12oo
+零件视频：https://youtu.be/dbJb6Fl12oo
 https://youtu.be/iQBfNWGhI5w
 
